better ohno.html

--- a/OHNO/ohno.html
+++ b/OHNO/ohno.html
@@ -1,1 +1,7 @@
-ohno
+    <script>
+        function ohno() {
+            alert("ohno");
+        }
+    </script>
+<button class="absolute-center h-4" data-feather="ohno"
+onclick="ohno()"></button>
